# file_processing_system

./: .dockerignore  Dockerfile  README.md  custom_exception.py  database.py  init_db.py  main.py  pyproject.toml
.github/workflows/: deployment-railway.yaml
alembic/: env.py
alembic/versions/: 4b10556d0612_initial_schema.py
api/: google_connect.py  upload_file.py  validate_file.py
api/routes/: upload_file.py
models/: __init__.py  content.py  csv_upload.py
repository/: save_content.py  save_metadata.py
schemas/: upload_file.py  validate_file.py
services/: __init__.py  upload_file.py  validate_file.py
